refactor: polish text editing and editor structure
- finalize text editing behavior and related components
- clean up directory layout and class names
- fix E-Ink landscape mode not refreshing correctly

CN_中文说明：
- 完善并重构文本编辑相关交互与组件
- 调整项目目录结构并规范类命名
- 修复 E-Ink 平台横屏模式下不刷新的问题

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ pubspec.lock
 
 # Example SHOULD commit its pubspec.lock
 !example/pubspec.lock
+
+example/lib
+!example/lib/main.dart
+!example/lib/embedded_file.dart
